# rs_template

./: README.md
rust/: Cargo.toml
rust/router_container/: Cargo.toml
rust/router_container/src/: lib.rs
rust/router_macro/: Cargo.toml
rust/router_macro/src/: lib.rs
rust/test_lambda/: Cargo.toml
rust/test_lambda/src/: hello.rs  main.rs
terraform/: .gitignore  .terraform.lock.hcl  api.tf  maint.tf  outputs.tf  variables.tf
